fix(front-end): remove overlay on mobile version

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -384,6 +384,22 @@ body {
                 }
             }
 
+            .phone-overlay {
+                display: none;
+
+                @include mobile {
+                    display: block;
+                }
+            }
+
+            .desktop-overlay {
+                display: block;
+
+                @include mobile {
+                    display: none;
+                }
+            }
+
             .left-arrow {
                 position: absolute;
                 top: 50%;
